# MusicShare-backend

./: .gitignore  CMakeLists.txt  README.md  mus_app.json
DB/: create.sql  restricts.sql  schema
db/postgres/: create_schema.sql
db/postgres/migrations/: u0001_021221_MUS-28_create_tables.sql  u0002_021221_MUS-28_populate.sql  v0001_021221_MUS-28_create_tables.sql  v0002_021221_MUS-28_populate.sql  v0003_281221_MUS-28_populate_songs.sql
doc/db/: schema.mwb
docs/: schema
lib/: CMakeLists.txt
lib/config-parser/: CMakeLists.txt
lib/config-parser/include/config-parser/: config.h
lib/config-parser/src/: config.cc
lib/http/: CMakeLists.txt
lib/http-server/: CMakeLists.txt
lib/http-server/include/http-server/: acceptor.h  connection.h  exception.h  imiddleware.h  request.h  requesthandler.h  response.h  route.h  routenode.h  router.h  routetrie.h  server.h
lib/http-server/src/: acceptor.cc  connection.cc  imiddleware.cc  route.cc  routenode.cc  router.cc  routetrie.cc  server.cc  util.h
lib/http-server/tests/unittests/: CMakeLists.txt
lib/http/examples/: CMakeLists.txt
lib/http/examples/http-server/: CMakeLists.txt  main.cc
lib/http/include/http/: common.h  server.h
lib/http/include/http/common/: cookie.h  header.h  message.h  querystring.h  request.h  response.h  status.h
lib/http/include/http/server/: acceptor.h  connection.h  exception.h  imiddleware.h  middleware.h  requesthandler.h  router.h  server.h
lib/http/include/http/server/exception/: badrequest.h  exception.h  methodnotallowed.h  notfound.h
lib/http/include/http/server/middleware/: imiddleware.h  internalservererror.h  methodnotallowed.h  middleware.h  notfound.h
lib/http/include/http/server/router/: route.h  routenode.h  router.h  routetrie.h
lib/http/src/: CMakeLists.txt  util.cc  util.h
lib/http/src/common/: cookie.cc  querystring.cc
lib/http/src/server/: acceptor.cc  connection.cc  imiddleware.cc  server.cc
lib/http/src/server/middleware/: imiddleware.cc  internalservererror.cc  methodnotallowed.cc  notfound.cc
lib/http/src/server/router/: route.cc  routenode.cc  router.cc  routetrie.cc
lib/http/tests/unittests/: CMakeLists.txt  main.cc
lib/mus-internal/: CMakeLists.txt
lib/mus-internal/mus-controller/: CMakeLists.txt
lib/mus-internal/mus-controller/include/mus-controller/: chatcontroller.h  endpoint.h  playlistcontroller.h  request.h  response.h  songcontroller.h  usercontroller.h
lib/mus-internal/mus-controller/tests/unittests/: CMakeLists.txt  chatcontroller.h  main.cc  usercontroller.h
lib/mus-internal/mus-delivery/: CMakeLists.txt
lib/mus-internal/mus-delivery/include/mus-delivery/handler/: UserHandler.h  chathandler.h  chatmessagehandler.h  playlisthandler.h  songhandler.h  userhandler.h
lib/mus-internal/mus-delivery/include/mus-delivery/middleware/: authrequiredmiddleware.h
lib/mus-internal/mus-delivery/src/: serializer.h
lib/mus-internal/mus-delivery/src/handler/: chathandler.cc  chatmessagehandler.cc  playlisthandler.cc  songhandler.cc  userhandler.cc
lib/mus-internal/mus-delivery/src/middleware/: authrequiredmiddleware.cc
lib/mus-internal/mus-repo-postgres/: CMakeLists.txt
lib/mus-internal/mus-repo-postgres/include/mus-repo-postgres/: chat_message_repository_postgres.h  chat_repository_postgres.h  db_connection_postgres.h  db_utils.h  playlist_repository_postgres.h  session_repository_postgres.h  song_repository_postgres.h  sql_utils.h  user_repository_postgres.h
lib/mus-internal/mus-repo-postgres/include/mus-repo-postgres/internal/: database_object.h  repository_postgres.h  sql_utils.h
lib/mus-internal/mus-repo-postgres/src/: chat_message_repository_postgres.cc  chat_repository_postgres.cc  database_object.cc  db_connection_postgres.cc  playlist_repository_postgres.cc  session_repository_postgres.cc  song_repository_postgres.cc  user_repository_postgres.cc
lib/mus-internal/mus-repo-postgres/tests/unittests/: CMakeLists.txt  main.cc  test_chat_message_repository_postgres.h  test_chat_repository_postgres.h  test_playlist_repository_postgres.h  test_session_repository_postgres.h  test_song_repository_postgres.h  test_user_repository_postgres.h
lib/mus-internal/mus-usecase/: CMakeLists.txt
lib/mus-internal/mus-usecase/include/mus-usecase/: auth_use_case.h  chat_message_use_case.h  chat_use_case.h  playlist_use_case.h  song_use_case.h  user_use_case.h
lib/mus-internal/mus-usecase/include/mus-usecase/exception/: access_exception.h  create_exception.h  exist_exception.h  invalid_data_exception.h  null_pointer_exception.h  use_case_exception.h
lib/mus-internal/mus-usecase/include/mus_usecase/: auth_use_case.h  chat_use_case.h  playlist_use_case.h  song_use_case.h  user_use_case.h
lib/mus-internal/mus-usecase/src/: auth_use_case.cc  chat_message_use_case.cc  chat_use_case.cc  playlist_use_case.cc  song_use_case.cc  user_use_case.cc
lib/mus-internal/mus-usecase/tests/unittests/: CMakeLists.txt  main.cc  test_chat_message_use_case.h  test_chat_use_case.h  test_playlist_use_case.h  test_song_use_case.h  test_user_use_case.h
lib/mus-internal/mus-usecase/tests/unittests/matcher/: nullopt_matcher.h
lib/mus-internal/mus-usecase/tests/unittests/mock/: mock_chat_message_repository.h  mock_chat_repository.h  mock_playlist_repository.h  mock_playlist_usecase.h  mock_song_repository.h  mock_song_usecase.h  mock_user_repository.h  mock_user_usecase.h
lib/mus-internal/mus-utility/: CMakeLists.txt
lib/mus-internal/mus-utility/include/mus-utility/: crypto.h  random.h
lib/mus-internal/mus-utility/src/: CMakeLists.txt  crypto.cc  random.cc
lib/mus-internal/mus-utility/tests/: CMakeLists.txt
lib/mus-internal/mus-utility/tests/unittests/: CMakeLists.txt  main.cc  test_crypto.h  test_datetime.h  test_random.h
lib/reflectable/: CMakeLists.txt
lib/ws-server/: CMakeLists.txt
lib/ws-server/tests/unittests/: CMakeLists.txt
src/: main.cc
tests/: CMakeLists.txt
tests/inttests/: CMakeLists.txt  main.cc  test_auth_use_case.h  test_chat_use_case.h  test_playlist_use_case.h  test_song_use_case.h  test_user_use_case.h
(+73 files in other folders)
